...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Plan" id="xld-gq-mvW">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="rgM-JB-RpL">
                            <connections>
...
                                                            <rect key="frame" x="0.0" y="0.0" width="320" height="30"/>
                                                            <subviews>
                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Priority" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8c9-72-UeM">
                                                                    <rect key="frame" x="0.0" y="0.0" width="156" height="30"/>
                                                                    <accessibility key="accessibilityConfiguration" identifier="Priority"/>
...
                                                                    <nil key="highlightedColor"/>
                                                                </label>
                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Progress" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iii-vQ-MbW">
                                                                    <rect key="frame" x="164" y="0.0" width="156" height="30"/>
                                                                    <accessibility key="accessibilityConfiguration" identifier="Progress"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Start Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="F6L-TM-i7o">
                                                    <rect key="frame" x="16" y="12" width="78" height="20.5"/>
                                                    <autoresizingMask key="autoresizingMask"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Due Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="F8I-qZ-Pf5">
                                                    <rect key="frame" x="16" y="12" width="71.5" height="20.5"/>
                                                    <autoresizingMask key="autoresizingMask"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="New Task" largeTitleDisplayMode="never" id="nok-MU-363">
                        <barButtonItem key="backBarButtonItem" title="New Task" id="u7g-Pm-fib"/>
                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="nPZ-6i-ggb">
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Task Priority" id="j2x-LQ-p2Y"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="35D-Bn-s9j" userLabel="First Responder" sceneMemberID="firstResponder"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Task Progress" id="iL2-HD-VMW"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="GQH-XU-4Da" userLabel="First Responder" sceneMemberID="firstResponder"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Type" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="7cX-D4-Od3">
                                                    <rect key="frame" x="16" y="12" width="37.5" height="20.5"/>
                                                    <autoresizingMask key="autoresizingMask"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="New Plan" id="ksG-Dw-aSz">
                        <barButtonItem key="backBarButtonItem" title="New Plan" id="ZJa-sa-6dU"/>
                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="aew-Cx-lVt">
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Plan Type" id="c6p-fY-Yin"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="f9g-fv-2d6" userLabel="First Responder" sceneMemberID="firstResponder"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Developers" id="vgV-3W-7sc">
                        <barButtonItem key="leftBarButtonItem" title="Enroll" id="TVI-sq-PJP">
                            <connections>
                                <segue destination="oTn-OK-3Kb" kind="show" identifier="EnrollDeveloper" id="01u-6O-Jcd"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="New" largeTitleDisplayMode="never" id="fXZ-IJ-jYt">
                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="rJp-H7-ouz">
                            <connections>
...
            <objects>
                <navigationController id="6bT-4g-Sf9" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="About us" image="About us" selectedImage="About us Selected" id="T8v-o1-H9r"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="XDN-6S-weW">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="91"/>
...
