...
                "width": 250,
                "height": 150,
                "format": "png",
                "chart": {
                            "type": "outlabeledPie",
                            "data": {
                                        "labels": ["Study", "Work", "Shopping", "Game", "Travel", "Other"],
                                        "datasets": [{
                                                        "backgroundColor": ["#FF3784", "#36A2EB", "#4BC0C0", "#F77825", "#9966FF"],
                                                        "data": [\(numberOfTasksInDifferentPlan(forPlanType: .study)), \(numberOfTasksInDifferentPlan(forPlanType: .work)), \(numberOfTasksInDifferentPlan(forPlanType: .shopping)), \(numberOfTasksInDifferentPlan(forPlanType: .game)), \(numberOfTasksInDifferentPlan(forPlanType: .travel)), \(numberOfTasksInDifferentPlan(forPlanType: .other))]
                                                    }]
                                    },
                            "options": {
...
